--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script defer src="scripts/lang.js"></script>
     <script defer src="scripts/site.js"></script>
   </head>
-  <body data-i18n-title="meta.title">
-    <header class="site-header">
+<body class="home" data-i18n-title="meta.title">
+      <header class="site-header">
       <div class="site-header__bar" data-animate="up">
         <a class="brand" href="index.html">
           <span class="sr-only" data-i18n="brand.name">TANGUA A.S.</span>
